# keyra

./: ':w  .gitignore  Cargo.toml  Makefile  build.rs
capnp/: data.capnp
config/: default.toml
load_test/custom/: main.js  package.json
load_test/golang_client/: app  go.mod  main.go
load_test/k6/: binpro.js  compare.js
proto/: data.proto
schema/capnp/: data.capnp
schema/grpc/: data.proto
src/: client.rs  config.rs  handler.rs  lib.rs  main.rs  receival.rs  server.rs  sharding.rs  storage.rs  types.rs
src/core/: storage.rs
src/handler/: capnp.rs  mod.rs
src/protocol/: mod.rs
src/protocol/binpro/: server.rs
src/protocol/capnp/: handler.rs
src/protocol/grpc/: handler.rs  mod.rs  server.rs
src/protocol/http/: handler.rs  server.rs
