[package]
name = "keyra"
version = "0.1.0"
edition = "2021"

[dependencies]
capnp = "0.22.0"
tokio = { version = "1", features = ["full"] }
tonic = "0.14.2"
prost = "0.14.1"
tonic-prost = "0.14.1"
prost-types = "0.14.1"
capnp-rpc="0.22.0"
tokio-util = { version = "0.7.4", features = ["compat"] }
futures = "0.3.0"
actix-web = "4"
serde = "1.0.228"
config = "0.15.18"
loggix = "1.0.4"
dashmap = "6.1.0"
glommio = "0.9.0"
futures-lite = "1.13"
num_cpus = "1.0"
mimalloc = "0.1.48"
smallvec = { version = "1.10", features = ["write"] }

[build-dependencies]
tonic-build = "0.14.2"
tonic-prost-build = "0.14.2"
capnpc = "0.22.0"
